# pypilot_pi

./: .gitignore  CMakeLists.txt  README  VERSION.cmake  appveyor.yml  bld.bat  pypilot.fbp
.circleci/: config .yml.bak  config.yml
OLD/: CMakeLists.txt.bak  README  pypilot-errors-android.txt
OLD/cmake/: PluginGL.cmake  PluginJSON.cmake
OLD/libs/wxservdisc/: CMakeLists.txt
OLD/libs/wxservdisc/src/: Makefile.am  mdnsd.c
buildosx/InstallOSX/: pypilot_pi.pkgproj.in
ci/: circleci-build-android-armhf.sh  control  docker-build-flatpak.sh  docker-build-flatpak.sh.bak
cmake/: FindTinyXML.cmake.bak  PluginConfigure.cmake  PluginConfigure.cmake.bak  PluginInstall.cmake  PluginJSON.cmake  PluginNMEA.cmake  PluginPackage.cmake  PluginSetup.cmake  PluginSetup.cmake.bak  version.h.in  wxWTranslateCatalog.h.in
cmake/in-files/: cloudsmith-upload-android.sh.in  cloudsmith-upload.sh.in  org.opencpn.OpenCPN.Plugin.yaml.in
libs/GL/: gl_private.h
libs/glshim/: CMakeLists.txt
libs/wxJSON/: CMakeLists.txt
libs/wxservdisc/: NEWS  README.md
libs/wxservdisc/src/: CMakeLists.txt  mdnsd.c  wxServDisc.cpp  wxServDisc.h
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/pypilot/: site.yml
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  pypilot_pi.pot  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  trans-po.py  translate.sh  vi_VN.po  zh_CN.po  (+1 more)
src/: CalibrationDialog.cpp  CalibrationDialog.cpp.bak  CalibrationDialog.h  CalibrationPlot.cpp  CalibrationPlot.h  ConfigurationDialog.cpp  ConfigurationDialog.h  GainsDialog.cpp  GainsDialog.h  SettingsDialog.cpp  SettingsDialog.h  SignalKClientDialog.cpp  SignalKClientDialog.h  StatisticsDialog.cpp  StatisticsDialog.h  TexFont.cpp  TexFont.h  icons.cpp  icons.h  msvcdefs.h  ocpn_plugin.h  pydc.cpp  pydc.h  pypilotClientDialog.cpp  pypilotClientDialog.h  pypilotDialog.cpp  pypilotDialog.h  pypilotUI.cpp  pypilotUI.h  pypilot_client.cpp  pypilot_client.h  pypilot_pi.cpp  pypilot_pi.cpp.bak  pypilot_pi.h  pypilot_signalk_client.cpp  pypilot_signalk_client.h  signalk_client.cpp  signalk_client.h  version.h  wxWTranslateCatalog.h
src/jsoncpp/: json_reader.cpp  json_writer.cpp
src/jsoncpp/json/: reader.h  writer.h
src/plugingl/: pidc.cpp
src/wxJSON/: jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
